--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
 }
 
 .App-logo {
@@ -13,21 +21,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +28,243 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Top-bar {
+  position: fixed;
+  display: flex;
+  height: 12%;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+  margin-right: 0;
+  border-bottom: 1px solid white;
+  align-content: center;
+}
+
+.Name-text-container {
+  width: 33%;
+  position: relative;
+  align-self: center;
+  padding-left: 25px;
+}
+
+.Name-text {
+  font: roboto 400 normal 30px 35.15px;
+  font-size: 30px;
+}
+
+.Name-text-subtitle {
+  font: roboto 400 normal 30px 35.15px;
+  font-size: 20px;
+  font-style: italic;
+}
+
+.Top-bar-spacer {
+  position: relative;
+  width: 33%;
+  justify-self: center;
+}
+
+.Icons-container {
+  padding-right: 25px;
+  width: 33%;
+  position: relative;
+  justify-self: end;
+  align-self: center;
+  align-content: center;
+}
+
+.Icons-row{
+  justify-content: center;
+  justify-content: space-evenly;
+  align-content: center ;
+}
+
+.SM-button {
+  display: flex;
+  width:64px;
+  height: 64px;
+  margin: 3px;
+  background-color: black;
+  justify-content: center;
+}
+
+.Top-bar-link {
+  width: 48px;
+  height: 48px;
+  align-self: center;
+}
+
+.Top-bar-icon {
+  width: inherit;
+  height: inherit;
+  align-self: center;
+}
+
+.Top-bar-icon:hover {
+  fill: gray;
+  padding-top: 10%;
+}
+
+.App-container {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 12%;
+  bottom: 2%;
+  align-content: center;
+  justify-content: center;
+}
+
+.App-container-row {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  align-content: center;
+  overflow: hidden;
+  align-self: center;
+}
+
+.App-container-col {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  justify-content: center;
+}
+
+.Content-container {
+  display: flex;
+  margin: 0;
+  width: 95%;
+  height: 98%;
+  border: 1px solid white;
+  border-radius: 12px;
+  align-self: center;
+  background-color: black;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.Content-container:hover .Content-overlay{
+  display:none;
+
+}
+
+.Content-overlay {
+  position: absolute;
+  display: flex;
+  width: inherit;
+  height: inherit;
+  background-color: black;
+  opacity: 70%;
+  align-content: center;
+  justify-content: center;
+  border-radius: 12px;
+}
+
+.Content-icon-container{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  justify-content: center;
+  border-radius: 12px;
+}
+
+.Content-icon {
+  position: absolute;
+  justify-self: center;
+  align-self: center;
+}
+
+.Overlay-icon {
+  stroke: none;
+}
+
+.Content-title {
+  /* display: flex;
+  position: relative;
+  justify-content: center;
+  width: inherit;
+  font-family: Arial, Helvetica, sans-serif;
+  font: Helvetica 400 normal 30px 35.15px;
+  font-size: 20px;
+  padding-top: 2%; */
+}
+
+.Content-body {
+  display: flex;
+  position: relative;
+  top: 0.5%;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 2px;
+  justify-content: center;
+  overflow: scroll;
+  justify-self: center;
+}
+
+.Content-body img{
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  justify-self: center;
+}
+
+.Content-description {
+  display: flex;
+  position: relative;
+  width: 100%;
+  text-justify: newspaper;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  justify-self: center;
+  justify-content: center;
+
+}
+
+.Creation-post {
+  justify-content: center;
+  padding-bottom: 25px;
+}
+
+.Music-post {
+  padding-bottom: 25px;
+}
+
+.Post-spacer {
+  height: 2%;
+}
+
+.Instagram-embed {
+  display: flex;
+  justify-content: center;
+}
+
+.Media-body {
+  padding: 0;
+  overflow: scroll;
+  justify-self: center;
+}
+
+.Content-container:hover {
+  border-color: gray;
+}
+
+.Bottom-bar {
+  position: absolute;
+  height: 8%;
+  padding: 0;
+  margin: 0;
+  top: 92%;
+  background: #606060;
 }
